--- a/packages/common/i18n/src/locales/zh.json
+++ b/packages/common/i18n/src/locales/zh.json
@@ -1,14 +1,11 @@
 {
   "route": {
     "basic": "基础示例",
-    "event": "事件相关",
-    "grid": "网格",
-    "info": "详情信息",
-    "slot": "使用插槽",
-    "chart": "ECharts 图表",
-    "markline": "辅助线",
-    "group": "组合与拆分",
-    "menu": "菜单操作栏"
+    "comprehensive": "综合",
+    "comprehensive2": "综合(另外写法)",
+    "customizeButtons": "自定义按键",
+    "moveble": "moveble插件结合",
+    "Selecto": "Selecto测试"
   },
   "common": {
     "code": "代码",
