--- a/packages/common/i18n/src/locales/en.json
+++ b/packages/common/i18n/src/locales/en.json
@@ -4,7 +4,8 @@
     "comprehensive": "comprehensive",
     "comprehensive2": "comprehensive2",
     "customizeButtons": "customizeButtons",
-    "Selecto": "Selecto test"
+    "selecto": "Selecto test",
+    "input": "input test"
   },
   "common": {
     "code": "Code",
