--- a/packages/common/i18n/src/locales/zh.json
+++ b/packages/common/i18n/src/locales/zh.json
@@ -5,7 +5,8 @@
     "comprehensive2": "综合(另外写法)",
     "customizeButtons": "自定义按键",
     "moveble": "moveble插件结合",
-    "Selecto": "Selecto测试"
+    "selecto": "Selecto测试",
+    "input": "input测试"
   },
   "common": {
     "code": "代码",
