--- a/packages/common/i18n/src/locales/en.json
+++ b/packages/common/i18n/src/locales/en.json
@@ -5,7 +5,8 @@
     "comprehensive2": "comprehensive2",
     "customizeButtons": "customizeButtons",
     "selecto": "Selecto test",
-    "input": "input test"
+    "input": "input test",
+    "esDragle":"esDragle"
   },
   "common": {
     "code": "Code",
