--- a/packages/common/i18n/src/locales/zh.json
+++ b/packages/common/i18n/src/locales/zh.json
@@ -6,7 +6,8 @@
     "customizeButtons": "自定义按键",
     "moveble": "moveble插件结合",
     "selecto": "Selecto测试",
-    "input": "input测试"
+    "input": "input测试",
+    "esDragle": "esDragle测试"
   },
   "common": {
     "code": "代码",
