添加simple-panzoom例子,并优化居中算法

--- a/packages/common/i18n/src/locales/en.json
+++ b/packages/common/i18n/src/locales/en.json
@@ -6,7 +6,8 @@
     "customizeButtons": "customizeButtons",
     "selecto": "Selecto test",
     "input": "input test",
-    "esDragle":"esDragle"
+    "esDragle": "esDragle test",
+    "bigscreen": "bigscreen-simple-panzoom"
   },
   "common": {
     "code": "Code",
