--- a/packages/common/i18n/src/locales/zh.json
+++ b/packages/common/i18n/src/locales/zh.json
@@ -7,7 +7,8 @@
     "moveble": "moveble插件结合",
     "selecto": "Selecto测试",
     "input": "input测试",
-    "esDragle": "esDragle测试"
+    "esDragle": "esDragle测试",
+    "bigscreen": "大屏辅助simple-panzoom"
   },
   "common": {
     "code": "代码",
