--- a/packages/common/i18n/src/locales/zh.json
+++ b/packages/common/i18n/src/locales/zh.json
@@ -8,7 +8,8 @@
     "selecto": "Selecto测试",
     "input": "input测试",
     "esDragle": "esDragle测试",
-    "bigscreen": "大屏辅助simple-panzoom"
+    "bigscreen": "大屏辅助simple-panzoom",
+    "8k": "8K画面测试"
   },
   "common": {
     "code": "代码",
