--- a/packages/common/i18n/src/locales/en.json
+++ b/packages/common/i18n/src/locales/en.json
@@ -7,7 +7,8 @@
     "selecto": "Selecto test",
     "input": "input test",
     "esDragle": "esDragle test",
-    "bigscreen": "bigscreen-simple-panzoom"
+    "bigscreen": "bigscreen-simple-panzoom",
+    "8k": "8K  test"
   },
   "common": {
     "code": "Code",
