--- a/packages/common/i18n/src/locales/zh.json
+++ b/packages/common/i18n/src/locales/zh.json
@@ -9,7 +9,8 @@
     "input": "input测试",
     "esDragle": "esDragle测试",
     "bigscreen": "大屏辅助simple-panzoom",
-    "8k": "8K画面测试"
+    "8k": "8K画面测试",
+    "sketch-ruler": "8K画板"
   },
   "common": {
     "code": "代码",
